# c-my-db

./: CMakeLists.txt  README.md  example.ini  main.c
include/extensions/: sds.h  string.h  vec.h
include/my-db/: Database.h  handlers.h  request.h  sds-extensions.h
include/my-db/ini/: Config.h  Property.h  Section.h  reader.h  writer.h
include/my-db/tables/: firm.h
src/: Database.c  handlers.c  request.c  sds-extensions.c
src/extensions/: sds.c  string.c  vec.c
src/ini/: Config.c  Property.c  Section.c  reader.c  writer.c
src/tables/: firm.c
tests/Database/: add-new-record.c  add-null.c  create-empty.c  delete-exists-record.c  delete-not-exists-record.c  delete-with-outside-id.c  free-null.c  put-in-place-of-an-existing-record.c  put-with-id-out-of-range.c  put-with-not-exists-id.c  should-change-id-of-record.c
tests/handlers/add/: add-with-custom-id.c  should-add-two-records.c  should-return-valid-section.c
tests/handlers/delete/: exists-record.c
tests/handlers/select/: simple-select.c  with-id.c  with-limit.c  with-order-without-dir.c  with-order.c  with-where.c
tests/hello-set/: hello.c
tests/ini/Config/: create.c  free-null.c  get-exists-property.c  get-not-exists-property.c
tests/ini/Property/: clean.c  copyToNumbers-NULL.c  copyToNumbers-should-copy-values.c  create.c  free-null.c  get-number-for-invalid-state.c  get-number-for-valid-state.c  get-numbers-for-invalid-state.c  get-numbers-for-valid-state.c
tests/ini/Section/: add-property.c  create.c  find-with-exists-prefix.c  find-with-non-exists-prefix.c  free-null.c  get-exists-property.c  get-not-exists-property.c
tests/ini/reader/: read-array-of-numbers.c  read-array-of-strings.c  read-empty-section.c  read-mixed-array-should-be-null.c  read-section-with-number.c  read-section-with-string-value.c  read-string.c  read-with-quotes.c
tests/ini/writer/: one-section.c  should-add-array-prefix.c  should-not-add-array-suffix-if-already-exists.c  string-array.c  string-property.c  two-secions.c
tests/request/: add-single-record.c  add-some-records.c  delete-with-where.c  free-null.c  select-with-limit.c  select-with-order-without-dir.c  select-with-order.c  select-with-where.c  simple-select.c
tests/tables/: create-default-firm.c  create-with-nulls.c  create-with-params.c  free-null.c
